--- a/PublicArt/Base.lproj/Main.storyboard
+++ b/PublicArt/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
         <scene sceneID="hdP-Ro-F5j">
             <objects>
                 <collectionViewController storyboardIdentifier="DiscoverCollectionViewControllerID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="g7n-ws-DDI" customClass="MainMenuCollectionViewController" customModule="PublicArt" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="DDV-sK-8N4">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" id="DDV-sK-8N4">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -401,10 +401,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="487"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="laB-Sb-Wvs" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="790"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="771"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jWh-d9-GTp" userLabel="InfoView">
-                                                <rect key="frame" x="0.0" y="0.0" width="600" height="790"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="771"/>
                                                 <subviews>
                                                     <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="poq-xo-sc2" userLabel="artImageView">
                                                         <rect key="frame" x="0.0" y="2" width="600" height="600"/>
@@ -475,30 +475,15 @@
                                                             <constraint firstAttribute="width" constant="22" id="ppx-xM-DYy"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fPE-BJ-2LA" userLabel="mapButton">
-                                                        <rect key="frame" x="87" y="740" width="50" height="50"/>
-                                                        <color key="backgroundColor" red="0.45098039220000002" green="0.62745098040000002" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="50" id="KQj-FY-Riz"/>
-                                                            <constraint firstAttribute="width" constant="50" id="njK-Pj-L5W"/>
-                                                        </constraints>
-                                                        <state key="normal" title="Map">
-                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                        </state>
-                                                        <connections>
-                                                            <segue destination="oad-Te-es5" kind="presentation" identifier="MapButtonToMapID" id="W9m-Iy-Af1"/>
-                                                        </connections>
-                                                    </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="hxv-6W-p0P" userLabel="locationButton">
-                                                        <rect key="frame" x="32" y="740" width="51" height="50"/>
+                                                        <rect key="frame" x="32" y="740" width="51" height="31"/>
                                                         <fontDescription key="fontDescription" name="Baskerville-SemiBold" family="Baskerville" pointSize="16"/>
                                                         <state key="normal" title="Button">
                                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                         </state>
                                                         <connections>
-                                                            <segue destination="oad-Te-es5" kind="presentation" identifier="LocationButtonToMapID" id="ICm-2k-qAt"/>
+                                                            <segue destination="oad-Te-es5" kind="presentation" identifier="ButtonToMapID" id="ICm-2k-qAt"/>
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Zoom" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Cm-oA-eUa">
@@ -524,24 +509,20 @@
                                                     <constraint firstItem="w3O-IE-Dub" firstAttribute="leading" secondItem="xjK-Hn-Sxv" secondAttribute="leading" id="6Y0-4g-oYj"/>
                                                     <constraint firstItem="hxv-6W-p0P" firstAttribute="leading" secondItem="sdV-Pl-et5" secondAttribute="leading" id="6qJ-Mp-Epe"/>
                                                     <constraint firstItem="xjK-Hn-Sxv" firstAttribute="top" secondItem="w3O-IE-Dub" secondAttribute="bottom" id="7dt-GQ-v90"/>
-                                                    <constraint firstItem="hxv-6W-p0P" firstAttribute="top" secondItem="fPE-BJ-2LA" secondAttribute="top" id="AiF-xQ-Xex"/>
                                                     <constraint firstItem="VDp-Vs-vO4" firstAttribute="top" secondItem="xjK-Hn-Sxv" secondAttribute="bottom" constant="8" id="BSr-LG-cvd"/>
                                                     <constraint firstItem="e4F-uZ-ISZ" firstAttribute="centerY" secondItem="xjK-Hn-Sxv" secondAttribute="centerY" id="DSt-QD-fpB"/>
                                                     <constraint firstAttribute="trailing" secondItem="poq-xo-sc2" secondAttribute="trailing" id="Guv-uH-fOf"/>
                                                     <constraint firstItem="w3O-IE-Dub" firstAttribute="leading" secondItem="jWh-d9-GTp" secondAttribute="leading" constant="32" id="JBx-Zl-rXY"/>
                                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="GAf-hg-gN0" secondAttribute="trailing" constant="16" id="N2B-JJ-di5"/>
-                                                    <constraint firstItem="hxv-6W-p0P" firstAttribute="height" secondItem="fPE-BJ-2LA" secondAttribute="height" id="QRz-B2-6CK"/>
                                                     <constraint firstItem="w3O-IE-Dub" firstAttribute="top" secondItem="poq-xo-sc2" secondAttribute="bottom" constant="8" id="W67-em-bq4"/>
                                                     <constraint firstItem="e4F-uZ-ISZ" firstAttribute="leading" secondItem="xjK-Hn-Sxv" secondAttribute="trailing" constant="4" id="Ykm-yX-yQR"/>
                                                     <constraint firstItem="VDp-Vs-vO4" firstAttribute="leading" secondItem="w3O-IE-Dub" secondAttribute="leading" id="Zds-ag-QC1"/>
                                                     <constraint firstItem="Mbz-b0-SPa" firstAttribute="centerX" secondItem="poq-xo-sc2" secondAttribute="centerX" constant="8.5" id="ZeH-7i-p0I"/>
                                                     <constraint firstItem="poq-xo-sc2" firstAttribute="leading" secondItem="jWh-d9-GTp" secondAttribute="leading" id="crN-0p-9e1"/>
-                                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fPE-BJ-2LA" secondAttribute="trailing" constant="16" id="d91-by-agK"/>
                                                     <constraint firstAttribute="trailing" secondItem="VDp-Vs-vO4" secondAttribute="trailing" constant="16" id="dg4-0n-RFl"/>
                                                     <constraint firstItem="3Cm-oA-eUa" firstAttribute="centerX" secondItem="poq-xo-sc2" secondAttribute="centerX" id="fIV-hU-jSj"/>
                                                     <constraint firstItem="poq-xo-sc2" firstAttribute="top" secondItem="jWh-d9-GTp" secondAttribute="top" constant="2" id="g5h-Rw-Wyn"/>
                                                     <constraint firstItem="sdV-Pl-et5" firstAttribute="top" secondItem="VDp-Vs-vO4" secondAttribute="bottom" constant="8" id="jiF-bO-VTD"/>
-                                                    <constraint firstItem="fPE-BJ-2LA" firstAttribute="leading" secondItem="hxv-6W-p0P" secondAttribute="trailing" constant="4" id="uyv-mV-piB"/>
                                                     <constraint firstItem="VDp-Vs-vO4" firstAttribute="leading" secondItem="sdV-Pl-et5" secondAttribute="leading" id="vML-df-fLf"/>
                                                     <constraint firstItem="VDp-Vs-vO4" firstAttribute="width" secondItem="sdV-Pl-et5" secondAttribute="width" id="vaE-18-bvg"/>
                                                     <constraint firstAttribute="bottom" secondItem="hxv-6W-p0P" secondAttribute="bottom" id="w5E-7k-xbp"/>
@@ -767,7 +748,6 @@
         <image name="tab-photos" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ICm-2k-qAt"/>
         <segue reference="yOj-sC-Yqh"/>
     </inferredMetricsTieBreakers>
 </document>
